--- a/inst/doc/dataRetrieval.Rnw
+++ b/inst/doc/dataRetrieval.Rnw
@@ -275,7 +275,7 @@ with(dischargeToday, plot(
 %------------------------------------------------------------
 \subsection{USGS Water Quality Retrievals}
 %------------------------------------------------------------
-Finally, we can use the dataRetrieval package to get water quality data that is available on the water quality data portal: \url{http://www.waterqualitydata.us/}. The raw data us obtained from the function  getRawQWData, with the similar input arguments: siteNumber, parameterCd, startDate, endDate, and interactive. The difference is in parameterCd, in this function multiple parameters can be queried using a ";" separator, and setting parameterCd <- "" will return all of the measured observations. The raw data can be overwelming (as will be demonstrated), a simplified version of the data can be obtained using getQWData.
+Finally, we can use the dataRetrieval package to get USGS water quality data that is available on the water quality data portal: \url{http://www.waterqualitydata.us/}. The raw data us obtained from the function  getRawQWData, with the similar input arguments: siteNumber, parameterCd, startDate, endDate, and interactive. The difference is in parameterCd, in this function multiple parameters can be queried using a ";" separator, and setting parameterCd <- "" will return all of the measured observations. The raw data can be overwelming (as will be demonstrated), a simplified version of the data can be obtained using getQWData.
 
 
 <<label=getQW, echo=TRUE>>=
@@ -329,7 +329,7 @@ with(dissolvedNitrateSimple, plot(
 \end{figure}
 
 %------------------------------------------------------------
-\subsection{Water Quality Retrievals}
+\subsection{Other Water Quality Retrievals}
 %------------------------------------------------------------
 Additionally, there are additional data sets available on the Water Quality Portal (\url{http://www.waterqualitydata.us/}).  These data sets can be housed in either the STORET or NWIS database.  Since STORET does not use USGS parameter codes, a 'characteristic name' must be supplied.  The following example retrieves specific conductance from a DNR site in Wisconsin.
 
@@ -347,7 +347,10 @@ Rather than using the raw data as retrieved by the web, the dataRetrieval packag
 
 In this section, we use 3 dataRetrieval functions to get sufficient data to perform an EGRET analysis.  We will continue analyzing the Choptank River. We will need essentially the same data that was retrieved in the previous section, but we will get the daily discharge values in a dataframe called Daily, the nitrate sample data in a dataframe called Sample, and the data about the station and parameters in a dataframe called INFO. These are the dataframes that were exclusively designed to work with the EGRET R package, however can be very useful for all hydrologic studies.
 
-The funtion to obtain the daily values (discharge in this case) is getDVData.  It requires the inputs siteNumber, ParameterCd, StartDate, EndDate, interactive, and convert. Most of these arguments are described in the previous section, however 'convert' is a new argument, it's default is TRUE, and it tells the program to convert the values from cfs to cms. If you don't want this conversion, set convert=FALSE in the function call.
+%------------------------------------------------------------
+\subsection{Daily Data}
+%------------------------------------------------------------
+The function to obtain the daily values (discharge in this case) is getDVData.  It requires the inputs siteNumber, ParameterCd, StartDate, EndDate, interactive, and convert. Most of these arguments are described in the previous section, however 'convert' is a new argument, it's default is TRUE, and it tells the program to convert the values from cfs to cms. If you don't want this conversion, set convert=FALSE in the function call.
 
 <<firstExample>>=
 siteNumber <- "01491000"
@@ -358,6 +361,8 @@ endDate <- "2013-01-01"
 Daily <- getDVData(siteNumber, "00060", startDate, endDate,interactive=FALSE)
 summary(Daily)
 @
+
+Details of the Daily dataframe are listed below:
 
 <<label=colNamesDaily, echo=FALSE,results=tex>>=
 ColumnName <- c("Date", "Q", "Julian","Month","Day","DecYear","MonthSeq","Qualifier","i","LogQ","Q7","Q30")
@@ -371,8 +376,12 @@ data.table <- xtable(DF,
 print(data.table, caption.placement="top",floating="FALSE",latex.environments=NULL)
 @
 \\*
+
 The code will shift the discharge values to 0.001 times the mean if there are zero values detected in order to perform the logarithm. Columns Q7 and Q30 are 7 and 30 day running averages. 
 
+%------------------------------------------------------------
+\subsection{Sample Data}
+%------------------------------------------------------------
 The function to obtain sample data from the water quality portal is getSampleData. The arguments for this function are also siteNumber, ParameterCd, StartDate, EndDate, interactive. These are the same inputs as getRawQWData or getQWData as described in the previous section.
 
 <<secondExample>>=
@@ -380,6 +389,8 @@ Sample <-getSampleData(siteNumber,parameterCd,
       startDate, endDate,interactive=FALSE)
 summary(Sample)
 @
+
+Details of the Sample dataframe are listed below:
 
 <<label=colNamesQW, echo=FALSE,results=tex>>=
 ColumnName <- c("Date", "ConcLow", "ConcHigh", "Uncen", "ConcAve", "Julian","Month","Day","DecYear","MonthSeq","SinDY","CosDY","Q","LogQ")
@@ -393,12 +404,16 @@ data.table <- xtable(DF,
 print(data.table, caption.placement="top",floating="FALSE",latex.environments=NULL)
 @
 
-
+%------------------------------------------------------------
+\subsection{INFO Data}
+%------------------------------------------------------------
 The function to obtain "metadata", data about the gage station and measured parameters is getMetaData. This function essentially combines getSiteFileData and getParameterInfo, producing one dataframe called INFO.
 
 <<ThirdExample>>=
 INFO <-getMetaData(siteNumber,parameterCd, interactive=FALSE)
 @
+
+Column names in the INFO dataframe are listed below:
 
 <<label=colNamesQW, echo=FALSE,results=tex>>=
 infoDF <- data.frame(ColumnNames=names(INFO[1:21]),ColumnNames=names(c(INFO[22:41],"")))
@@ -452,18 +467,18 @@ Similarly to the previous section, getSampleDataFromFile will import a user-gene
 
 \begin{verbatim}
 cdate;remarkCode;Nitrate
-10/7/1999;;1.4
-11/4/1999;<;0.99
-12/3/1999;;1.42
-1/4/2000;;1.59
-2/3/2000;;1.54
+10/7/1999,,1.4
+11/4/1999,<,0.99
+12/3/1999,,1.42
+1/4/2000,,1.59
+2/3/2000,,1.54
 ...
 \end{verbatim}
 The call to open this file, and populate the Sample dataframe would be:
 <<openSample, eval = TRUE>>=
 fileName <- "ChoptankRiverNitrate.csv"
-filePath <-  "~/RData/"
-Sample <- getSampleDataFromFile(filePath,fileName,separator=";",interactive=FALSE)
+filePath <-  "C:/RData/"
+Sample <- getSampleDataFromFile(filePath,fileName,separator=",",interactive=FALSE)
 head(Sample)
 @
 
